# surface-sampling

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  citation.cff  engaging_template.sh  environment.yml  error.txt  pyproject.toml
.github/workflows/: tests.yml
ase_eam_comparison/: LAMMPS_Cu_energies.ipynb
asm_eam_comparison/eam_3.615/: lammps.data  lammps.in  lammps.out
config_bk/: nff_pytorch2_environment.yml
mcmc/: __init__.py  calculators.py  criterion.py  dynamics.py  energy.py  event.py  mcmc.py  mcmc_bk.py  mcmc_refactor.py  plot.py  slab.py  system.py  utils.py
mcmc/Au/: Au_110.ipynb  Au_110_canonical.ipynb  Au_110_sites_manipulation_2x2.ipynb  Au_110_tests.ipynb
mcmc/Cu/: Cu.ipynb  Cu_test.ipynb  ase_manual_add_atom.ipynb  ase_surface.ipynb  eam_speedtest.ipynb
mcmc/GaN/: 20220428_GaN_0001_run_analysis.ipynb  20220528_GaN_0001_run_analysis.ipynb  GaAs_001.py  GaN_0001.ipynb  GaN_0001_contracted_monolayer.ipynb  GaN_0001_multiple_runs.py  GaN_0001_results.ipynb  GaN_MD_debug.ipynb  InGaN_000neg1_sw_sgcmc_trial.ipynb  flipped_pymatgen_adsorption_sites.ipynb  log.lammps  multiple_ads_trial.ipynb  pymatgen_adsorption_sites.ipynb  pymatgen_structure_comparison.ipynb
mcmc/Si/: Si_111.ipynb
mcmc/SrTiO3/: 0707_ase_sites_SrTiO3_001_2x2_filtered_adsorbed.ipynb  0707_combined_sites_SrTiO3_2x2_single_ads_test.ipynb  SrTiO3.ipynb  SrTiO3_2x2_1ads_only.ipynb  pymatgen_sites_SrTiO3_2x2_O_rules.ipynb  pymatgen_sites_SrTiO3_2x2_sampling.ipynb  template_pymatgen_sites_SrTiO3_2x2.ipynb
mcmc/active_learning/: clustering.py  collate_bulk_samples.py  perturb_structures.py
mcmc/calculators/: __init__.py  calculators.py  lammpsrun.py
mcmc/events/: criterion.py  event.py  proposal.py
mcmc/potentials/: Au_u3.eam  Cu_u3.eam  GaN.meam  GaN.tersoff
mcmc/pourbaix/: atoms.py  utils.py
mcmc/py_lammps/: GaN.tersoff  ase_read_lammps.ipynb
mcmc/uncertainty/: __init__.py  gmm.py  json_dataset.py  prediction.py  uncertainty.py  utils.py
mcmc/utils/: __init__.py  clustering.py  cut_surfaces.py  filter_stoichiometries.py  logger.py  logging.py  misc.py  plot.py  plot_settings.py  sampling.py  setup.py  slab.py
scripts/: clustering.py  create_surface_formation_entries.py  cut_surfaces.py  default_settings.py  filter_stoichiometries.py  perturb_structures.py  sample_SrIrO3_bulk.py  sample_bulk.py  sample_pourbaix_surface.py  sample_surface.py  sample_surface_PaiNN.py
scripts/configs/: sample_config_chgnet.json  sample_config_painn.json  (+2 more)
sgmc_Cu_surf/: .prof_stats  Au_110.ipynb  Au_110_canonical.ipynb  Au_110_sites_manipulation.ipynb  Cu2.eam.fs  Cu_Ag_111.ipynb  Cu_slab.cif  GaAs_001.ipynb  GaN_0001_contracted_monolayer.ipynb  GaN_0001_multiple_runs.py  GaN_001.ipynb  SiTiO3.ipynb  Si_100.ipynb  Si_111.ipynb  Si_sites.ipynb  SrTiO3.ipynb  SrTiO3_001_2x2_O_ads_slabs_try3.pkl  SrTiO3_001_4x4_O_ads_slabs_try4.pkl  ase_manipulation.py  ase_manual_add_atom.ipynb  ase_surface.ipynb  gratoms.cif  gratoms_2_delete_1.cif  gratoms_2_delete_2.cif  gratoms_adsorbed.cif  gratoms_adsorbed_2.cif  gratoms_again_adsorbed.cif  gratoms_rm_adsorbed.cif  hollow_slab.cif  imcmc.ipynb  lammps_ase_run.ipynb  log.lammps  mcmc.py  mr_surface_code.ipynb  profiling_stats.txt  proposed_slab_iter_001.cif  proposed_slab_iter_002.cif  proposed_slab_iter_003.cif  proposed_slab_iter_004.cif  proposed_slab_iter_005.cif  (+336 more)
sgmc_surf/: GaAs_001.py  GaN_0001_multiple_runs.py  GaN_0001_multiple_runs_pymatgen.py  Si_100.ipynb  SrTiO3_001_2x2_O_ads_slabs_try4.pkl  SrTiO3_001_3x3_O_ads_slabs_try4.pkl  error.txt  example.ipynb  mcmc.py  output.txt  pymatgen_adsorption_sites.ipynb  sample_slurm.sh
tests/: test_Au.py  test_Cu.py  test_GaN.ipynb  test_Si.ipynb  test_SrTiO3_terms.ipynb  test_filter_distance.py  test_slab.py  test_slab_groups.py  test_system.py  test_utils.py
tutorials/: GaN_0001.ipynb  Si_111_5x5.ipynb  SrTiO3_001.ipynb  example.ipynb  lammps_config.json  lammps_energy_template.txt  lammps_opt_template.txt  lammps_template.txt  latent_space_clustering.ipynb  prepare_surface.ipynb
(+3141 files in other folders)
